@@ -139,3 +139,17 @@ test_that("Type with explicit class names", {
   removeClass("Test")
   
 })
+
+test_that("Types can deal with class unions", {
+  
+  Test(x ~ numeric | character | list) %type% .Object
+  
+  expect_is(Test(1)@x, "numeric")
+  expect_is(Test("")@x, "character")
+  expect_is(Test(list())@x, "list")
+  
+  removeClass("Test")
+  removeClass("numericORcharacter")
+  
+})
+
