@@ -4,6 +4,8 @@ Version 0.3.5
 anymore.
 - %type% supports 'type expressions', i.e. classes of slots can be expressed
 without default values in the type constructor.
+- type expressions: name ~ type, where a type is the unquoted name of a type
+/ S4-Class or a class union of the form 'type1 | type2 [| ...]'
 
 Version 0.3.4
 - The class Show is not a reference class anymore but an ordinary S4 class. This
